--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center" >
     <div class="container" data-aos="fade-up" data-aos-delay="100">
       <h1>SLIVEN GROUP</h1>
-      <p>Somos <span class="typed" data-typed-items="desarrolladores, apasinados, comprometidos, especialistas"></span></p>
+      <p>Somos <span class="typed" data-typed-items="desarrolladores, apasionados, comprometidos, especialistas"></span></p>
      <!--  <div class="social-links">
         <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
