--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
   <!-- ======= Mobile nav toggle button ======= -->
   <!-- <button type="button" class="mobile-nav-toggle d-xl-none"><i class="bi bi-list mobile-nav-toggle"></i></button> -->
-  <i class="bi bi-list mobile-nav-toggle d-lg-none"></i>
+  <!-- <i class="bi bi-list mobile-nav-toggle d-lg-none"></i> -->
   <!-- ======= Header ======= -->
 <!--   <header id="header" class="d-flex flex-column justify-content-center">
 
@@ -104,6 +104,8 @@
           <div class="section-title">
           <h4 class="text-start text-uppercase" data-aos="fade-up" data-aos-delay="200"><b>COMUNIDAD ROCHE</b></h4>
           <p class="text-start" data-aos="fade-up" data-aos-delay="200">Sitio que muestra información de todo que concierne a enfermedades</p>
+          <a href="https://comunidadroche.com.pe/" target="_blank" class="btn btn-primary">Ver sitio</a>
+
         </div>
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
 
@@ -145,6 +147,7 @@
           <div class="section-title">
           <h4 class="text-start text-uppercase" data-aos="fade-up" data-aos-delay="200"><b>UNIVERSIDAD JAIME BAUSATE Y MEZA</b></h4>
           <p class="text-start" data-aos="fade-up" data-aos-delay="200">Sitio institucional</p>
+           <a href="https://bausate.edu.pe/" target="_blank" class="btn btn-primary">Ver sitio</a>
         </div>
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
 
@@ -187,6 +190,7 @@
           <div class="section-title">
           <h4 class="text-start text-uppercase" data-aos="fade-up" data-aos-delay="200"><b>SUNSET BOARD</b></h4>
           <p class="text-start" data-aos="fade-up" data-aos-delay="200">Tienda virtual de ventas de tablas de surf, accesorios y otros</p>
+           <a href="https://www.sunsetboard.com/" target="_blank" class="btn btn-primary">Ver sitio</a>
         </div>
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
 
@@ -248,6 +252,7 @@
           <div class="section-title">
           <h4 class="text-start text-uppercase" data-aos="fade-up" data-aos-delay="200"><b>SANIMED</b></h4>
           <p class="text-start" data-aos="fade-up" data-aos-delay="200">Tienda virtual de ventas de productos para cuidado personal</p>
+          <a href="https://sanimedperu.com/" target="_blank" class="btn btn-primary">Ver sitio</a>
         </div>
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
 
