--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@
         </div> -->
 
         <div class="portfolio-ctn">
-          <div class="section-title">
-          <h4 class="text-start text-uppercase" data-aos="fade-up" data-aos-delay="200"><b>COMUNIDAD ROCHE</b></h4>
-          <p class="text-start" data-aos="fade-up" data-aos-delay="200">Sitio que muestra información de todo que concierne a enfermedades</p>
-          <a href="https://comunidadroche.com.pe/" target="_blank" class="btn btn-primary">Ver sitio</a>
+          <div class="section-title text-start">
+          <h4 class=" text-uppercase" data-aos="fade-up" data-aos-delay="200"><b>COMUNIDAD ROCHE</b></h4>
+          <p class="mb-2" data-aos="fade-up" data-aos-delay="200">Sitio que muestra información de todo que concierne a enfermedades</p>
+          <a href="https://comunidadroche.com.pe/" data-aos="fade-up" data-aos-delay="200" target="_blank" class="btn btn-primary">Ver sitio</a>
 
         </div>
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
@@ -144,10 +144,10 @@
 
 
        <div class="portfolio-ctn">
-          <div class="section-title">
-          <h4 class="text-start text-uppercase" data-aos="fade-up" data-aos-delay="200"><b>UNIVERSIDAD JAIME BAUSATE Y MEZA</b></h4>
-          <p class="text-start" data-aos="fade-up" data-aos-delay="200">Sitio institucional</p>
-           <a href="https://bausate.edu.pe/" target="_blank" class="btn btn-primary">Ver sitio</a>
+          <div class="section-title text-start">
+          <h4 class="text-uppercase" data-aos="fade-up" data-aos-delay="200"><b>UNIVERSIDAD JAIME BAUSATE Y MEZA</b></h4>
+          <p  class="mb-2" data-aos="fade-up" data-aos-delay="200">Sitio institucional</p>
+           <a href="https://bausate.edu.pe/" data-aos="fade-up" data-aos-delay="200" target="_blank" class="btn btn-primary">Ver sitio</a>
         </div>
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
 
@@ -187,10 +187,10 @@
 
 
        <div class="portfolio-ctn">
-          <div class="section-title">
-          <h4 class="text-start text-uppercase" data-aos="fade-up" data-aos-delay="200"><b>SUNSET BOARD</b></h4>
-          <p class="text-start" data-aos="fade-up" data-aos-delay="200">Tienda virtual de ventas de tablas de surf, accesorios y otros</p>
-           <a href="https://www.sunsetboard.com/" target="_blank" class="btn btn-primary">Ver sitio</a>
+          <div class="section-title text-start">
+          <h4 class="text-uppercase" data-aos="fade-up" data-aos-delay="200"><b>SUNSET BOARD</b></h4>
+          <p  class="mb-2" data-aos="fade-up" data-aos-delay="200">Tienda virtual de ventas de tablas de surf, accesorios y otros</p>
+           <a href="https://www.sunsetboard.com/" data-aos="fade-up" data-aos-delay="200" target="_blank" class="btn btn-primary">Ver sitio</a>
         </div>
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
 
@@ -249,10 +249,10 @@
 
 
       <div class="portfolio-ctn">
-          <div class="section-title">
-          <h4 class="text-start text-uppercase" data-aos="fade-up" data-aos-delay="200"><b>SANIMED</b></h4>
-          <p class="text-start" data-aos="fade-up" data-aos-delay="200">Tienda virtual de ventas de productos para cuidado personal</p>
-          <a href="https://sanimedperu.com/" target="_blank" class="btn btn-primary">Ver sitio</a>
+          <div class="section-title text-start">
+          <h4 class=" text-uppercase" data-aos="fade-up" data-aos-delay="200"><b>SANIMED</b></h4>
+          <p  class="mb-2" data-aos="fade-up" data-aos-delay="200">Tienda virtual de ventas de productos para cuidado personal</p>
+          <a href="https://sanimedperu.com/" target="_blank" data-aos="fade-up" data-aos-delay="200" class="btn btn-primary">Ver sitio</a>
         </div>
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
 
