--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="robots" content="all, index, follow">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" >	
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	<link rel="stylesheet" type="text/css" href="public/assets/css/main.min.css"/>
+	<link rel="stylesheet" type="text/css" href="public/assets/css/main.min.css?ver=2.2"/>
 
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
