--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Instrument+Sans:ital,wght@0,400..700;1,400..700&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+
 </head>
 <body>
 	<!-- html solo para el menu responsive -->
@@ -227,6 +229,11 @@
 			</footer>
 		</div>
 	</main>
+
+	<a href="mailto:developerwpss@gmail.com" class="gEnvelope">		
+		<i class="fa-solid fa-envelope"></i>
+	</a>
+
 <script src="public/assets/js/jquery-3.7.1.min.js" id="main-js"></script>
 <script src="public/assets/js/main.min.js" id="main-js"></script>
 </body>
