--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
 		</div>
 	</main>
 
-	<a href="mailto:developerwpss@gmail.com" class="gEnvelope">		
+	<a href="mailto:sliven.group.digital@gmail.com" class="gEnvelope">		
 		<i class="fa-solid fa-envelope"></i>
 	</a>
 
