--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
 							<div class="b1Wrap">  
 								<h4 class="g1Title">SUNSET BOARD</h4>
 								<div class="g1Text">
-									Tienda virtual de tablas de surf, accesorios y otros
+									Tienda virtual que ofrece a los amantes del surf y deportes acuáticos una variedad de productos de alta calidad que cubran sus necesidades. La tienda se especializa en la venta de tablas de surf, accesorios, ropa y otros productos relacionados con el surf y el estilo de vida playero en deportes acuáticos y actividades al aire libre.
+
 								</div>				
 							</div>
 						</div>
@@ -96,7 +97,7 @@
 							<div class="b1Wrap">  
 								<h4 class="g1Title">UNIVERSIDAD JAIME BAUSATE Y MEZA</h4>
 								<div class="g1Text">
-									Sitio institucional
+									El sitio web de la Universidad Jaime Bausate y Meza tiene como objetivo mejorar la presencia digital de la institución, facilitar el acceso a la información para estudiantes, docentes, futuros postulantes y público general, así como fortalecer la comunicación interna y externa. El diseño y desarrollo del sitio deben reflejar la identidad institucional y facilitar la navegación con contenidos claros y actualizados
 								</div>					
 							</div>
 						</div>
@@ -130,7 +131,7 @@
 							<div class="b1Wrap">  
 								<h4 class="g1Title">SANIMED</h4>
 								<div class="g1Text">
-									Tienda virtual de productos para cuidado personal
+									Tienda virtual de productos para cuidado personal de alta calidad, especialmente pensados para mejorar el bienestar físico y mental de los consumidores. La propuesta se centrará en productos para el cuidado de la piel, cabello, higiene, y bienestar general, destacando aquellos que se alineen con valores como la salud, la naturalidad y la sostenibilidad.
 								</div>					
 							</div>
 						</div>
@@ -174,7 +175,7 @@
 							<div class="b1Wrap">  
 								<h4 class="g1Title">LEMONBURG</h4>
 								<div class="g1Text">
-									Tienda virtual de lentes, accesorios y otros
+										Tienda virtual de gafas de sol, gafas ópticas y lentes de alta calidad productos modernos y funcionales que ofrezcan no solo protección visual, sino también estilo. Los clientes podrán encontrar gafas de última moda, lentes graduados personalizados y otros accesorios relacionados, todo desde la comodidad de su hogar. La tienda virtual ofrecerá una experiencia de compra fácil, rápida y segura, enfocada en la satisfacción del cliente.
 								</div>					
 							</div>
 						</div>		
