--- a/index.html
+++ b/index.html
@@ -284,6 +284,27 @@
 							</div>
 						</div>
 
+						<div class="b1List grid scroll-item">
+							<div class="swiper mySwiper">
+								<div class="swiper-wrapper b1ListGallery">
+									<a href="" data-src="public/assets/images/inmobiliariapersonaliza/inicio.png" data-sub-html='<h4 class="g1Title">INMOBILIARIA PERSONALIZA</h4><div class="g1Text">Tienda virtual de lentes, accesorios y otros</div>' class="b1Item grid-item swiper-slide">
+										<picture>
+											<img src="public/assets/images/inmobiliariapersonaliza/inicio.png">
+										</picture>
+									</a>									
+								</div>
+								<!-- 	<div class="swiper-button-next"></div>
+			    				<div class="swiper-button-prev"></div> -->
+			    				 <div class="swiper-pagination"></div>
+							</div>
+							<div class="b1Wrap">  
+								<h4 class="g1Title">INMOBILIARIA PERSONALIZA</h4>
+								<div class="g1Text">
+										Tienda virtual de gafas de sol, gafas ópticas y lentes de alta calidad productos modernos y funcionales que ofrezcan no solo protección visual, sino también estilo. Los clientes podrán encontrar gafas de última moda, lentes graduados personalizados y otros accesorios relacionados, todo desde la comodidad de su hogar. La tienda virtual ofrecerá una experiencia de compra fácil, rápida y segura, enfocada en la satisfacción del cliente.
+								</div>					
+							</div>
+						</div>
+
 					</div>
 				<div class="b2 scroll-wrapper">
 						<div class="b2List">
