--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
 							<div class="b1Wrap">  
 								<h4 class="g1Title">INMOBILIARIA PERSONALIZA</h4>
 								<div class="g1Text">
-										Tienda virtual de gafas de sol, gafas ópticas y lentes de alta calidad productos modernos y funcionales que ofrezcan no solo protección visual, sino también estilo. Los clientes podrán encontrar gafas de última moda, lentes graduados personalizados y otros accesorios relacionados, todo desde la comodidad de su hogar. La tienda virtual ofrecerá una experiencia de compra fácil, rápida y segura, enfocada en la satisfacción del cliente.
+									Sitio web especializada en la venta departamentos, con un enfoque personalizado que se adapta a las necesidades y preferencias de cada cliente. Su principal objetivo es ofrecer soluciones inmobiliarias a medida, brindando asesoramiento integral durante todo el proceso de compra, desde la elección de la propiedad hasta la gestión de trámites y financiamiento.
 								</div>					
 							</div>
 						</div>
