--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 							<div class="b1Wrap">  
 								<h4 class="g1Title">UNIVERSIDAD JAIME BAUSATE Y MEZA</h4>
 								<div class="g1Text">
-									El sitio web de la Universidad Jaime Bausate y Meza tiene como objetivo mejorar la presencia digital de la institución, facilitar el acceso a la información para estudiantes, docentes, futuros postulantes y público general, así como fortalecer la comunicación interna y externa. El diseño y desarrollo del sitio deben reflejar la identidad institucional y facilitar la navegación con contenidos claros y actualizados
+									Sitio web de la Universidad Jaime Bausate y Meza tiene como objetivo mejorar la presencia digital de la institución, facilitar el acceso a la información para estudiantes, docentes, futuros postulantes y público general, así como fortalecer la comunicación interna y externa. El diseño y desarrollo del sitio deben reflejar la identidad institucional y facilitar la navegación con contenidos claros y actualizados
 								</div>					
 							</div>
 						</div>
@@ -279,7 +279,7 @@
 							<div class="b1Wrap">  
 								<h4 class="g1Title">COMUNIDAD ROCHE</h4>
 								<div class="g1Text">
-										Tienda virtual de gafas de sol, gafas ópticas y lentes de alta calidad productos modernos y funcionales que ofrezcan no solo protección visual, sino también estilo. Los clientes podrán encontrar gafas de última moda, lentes graduados personalizados y otros accesorios relacionados, todo desde la comodidad de su hogar. La tienda virtual ofrecerá una experiencia de compra fácil, rápida y segura, enfocada en la satisfacción del cliente.
+									Sitio web que proporcionar información sobre diversas enfermedades y condiciones de salud. Su propósito principal es educar y ofrecer recursos tanto a pacientes como a familiares y profesionales de la salud. A través de esta comunidad, Roche busca mejorar la comprensión de las enfermedades, los tratamientos disponibles y los avances en la investigación científica, con un enfoque especial en enfermedades como el cáncer, enfermedades raras y trastornos del sistema nervioso.
 								</div>					
 							</div>
 						</div>
