--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
 		<div class="wrapper">
 			<section class="b1 scroll-wrapper">
 				<div class="container">
-					<h1 class="b1Title scroll-item">
+					<!--<h1 class="b1Title scroll-item">
 						SLIVEN GROUP		
 					</h1>
 					<p class="b1Text scroll-item">Somos <span class="typed" data-typed-items="especialistas,  desarrolladores, apasionados, comprometidos"></span></p>
 					
 
-				<!-- 	<div>
+				 	<div>
 						
 						<div>
 
@@ -306,6 +306,7 @@
 						</div>
 
 					</div>
+					<!--
 				<div class="b2 scroll-wrapper">
 						<div class="b2List">
 							<div class="b2Item scroll-item">
@@ -346,12 +347,14 @@
 							</div>
 						</div>
 				</div>
+					-->
 			</section>
 			<footer>
 				<div class="container">
-					<h4>SLIVEN GROUP</h4>
+					<h4>Developer</h4>
+					<!--<h4>SLIVEN GROUP</h4>
 					<p>Comprometidos de verdad</p>
-					© Copyright SLIVEN GROUP. All Rights Reserved
+					© Copyright SLIVEN GROUP. All Rights Reserved -->
 				</div>
 			</footer>
 		</div>
