--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<meta name="author" content="SLIVEN GROUP">
+	<meta name="author" content="Developer WordPress">
 	<meta name="robots" content="all, index, follow">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" >	
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
