--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<meta name="author" content="Developer WordPress">
+	<meta name="author" content="SLIVEN GROUP">
 	<meta name="robots" content="all, index, follow">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" >	
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -35,13 +35,13 @@
 		<div class="wrapper">
 			<section class="b1 scroll-wrapper">
 				<div class="container">
-					<!--<h1 class="b1Title scroll-item">
+					<h1 class="b1Title scroll-item">
 						SLIVEN GROUP		
 					</h1>
 					<p class="b1Text scroll-item">Somos <span class="typed" data-typed-items="especialistas,  desarrolladores, apasionados, comprometidos"></span></p>
 					
 
-				 	<div>
+				<!-- 	<div>
 						
 						<div>
 
@@ -306,7 +306,6 @@
 						</div>
 
 					</div>
-					<!--
 				<div class="b2 scroll-wrapper">
 						<div class="b2List">
 							<div class="b2Item scroll-item">
@@ -347,14 +346,12 @@
 							</div>
 						</div>
 				</div>
-					-->
 			</section>
 			<footer>
 				<div class="container">
-					<h4>Developer</h4>
-					<!--<h4>SLIVEN GROUP</h4>
+					<h4>SLIVEN GROUP</h4>
 					<p>Comprometidos de verdad</p>
-					© Copyright SLIVEN GROUP. All Rights Reserved -->
+					© Copyright SLIVEN GROUP. All Rights Reserved
 				</div>
 			</footer>
 		</div>
